# space-rts

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  audio.cpp  audio.h  entities.cpp  entities.h  main.cpp  render.cpp  render.h  rts_game
.github/: copilot-instructions.md
src/: audio.cpp  audio.h  entities.cpp  entities.h  main.cpp  planet.cpp  planet.h  projectile.cpp  projectile.h  render.cpp  render.h  spacecraft.cpp  spacecraft.h
src/components/: Components.h
src/core/: ECSRegistry.cpp  ECSRegistry.h  Game.cpp  Game.h  GameStateManager.cpp  GameStateManager.h  SystemBase.h
src/gameplay/: GameplaySystem.cpp  GameplaySystem.h
src/input/: InputSystem.cpp  InputSystem.h
src/rendering/: AudioManager.cpp  AudioManager.h  Renderer.cpp  Renderer.h
src/systems/: CollisionSystem.cpp  CollisionSystem.h  CombatSystem.cpp  CombatSystem.h  MovementSystem.cpp  MovementSystem.h  RenderSystem.cpp  RenderSystem.h
src/ui/: UISystem.cpp  UISystem.h
